finish all features

--- a/mainUI.ui
+++ b/mainUI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>844</width>
-    <height>709</height>
+    <height>329</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -544,17 +544,12 @@ background-color: rgb(98, 98, 115);</string>
                </property>
                <layout class="QHBoxLayout" name="horizontalLayout_6">
                 <item>
-                 <widget class="QFontComboBox" name="ComboBox_font">
+                 <widget class="QComboBox" name="comboBox_font">
                   <property name="minimumSize">
                    <size>
-                    <width>0</width>
+                    <width>175</width>
                     <height>25</height>
                    </size>
-                  </property>
-                  <property name="font">
-                   <font>
-                    <pointsize>10</pointsize>
-                   </font>
                   </property>
                   <property name="styleSheet">
                    <string notr="true">color: rgb(220, 220, 220);
@@ -735,68 +730,7 @@ background-color: rgb(98, 98, 115);</string>
                </property>
                <layout class="QHBoxLayout" name="horizontalLayout_7">
                 <item>
-                 <widget class="QPushButton" name="boldButton">
-                  <property name="minimumSize">
-                   <size>
-                    <width>35</width>
-                    <height>35</height>
-                   </size>
-                  </property>
-                  <property name="maximumSize">
-                   <size>
-                    <width>35</width>
-                    <height>35</height>
-                   </size>
-                  </property>
-                  <property name="font">
-                   <font>
-                    <family>Yu Gothic UI</family>
-                    <pointsize>10</pointsize>
-                    <weight>75</weight>
-                    <bold>true</bold>
-                   </font>
-                  </property>
-                  <property name="styleSheet">
-                   <string notr="true">color: rgb(220, 220, 220);
-background-color: rgb(98, 98, 115);</string>
-                  </property>
-                  <property name="text">
-                   <string>B</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QPushButton" name="pushButton_14">
-                  <property name="minimumSize">
-                   <size>
-                    <width>35</width>
-                    <height>35</height>
-                   </size>
-                  </property>
-                  <property name="maximumSize">
-                   <size>
-                    <width>35</width>
-                    <height>35</height>
-                   </size>
-                  </property>
-                  <property name="font">
-                   <font>
-                    <family>Yu Gothic UI</family>
-                    <pointsize>10</pointsize>
-                    <italic>true</italic>
-                   </font>
-                  </property>
-                  <property name="styleSheet">
-                   <string notr="true">color: rgb(220, 220, 220);
-background-color: rgb(98, 98, 115);</string>
-                  </property>
-                  <property name="text">
-                   <string>I</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QPushButton" name="pushButton_15">
+                 <widget class="QPushButton" name="colorButton">
                   <property name="minimumSize">
                    <size>
                     <width>70</width>
@@ -805,9 +739,12 @@ background-color: rgb(98, 98, 115);</string>
                   </property>
                   <property name="maximumSize">
                    <size>
-                    <width>70</width>
+                    <width>16777215</width>
                     <height>35</height>
                    </size>
+                  </property>
+                  <property name="styleSheet">
+                   <string notr="true">background-color: rgb(255, 255, 255);</string>
                   </property>
                   <property name="text">
                    <string/>
@@ -903,7 +840,7 @@ background-color: rgb(98, 98, 115);</string>
       <property name="maximumSize">
        <size>
         <width>16777215</width>
-        <height>500</height>
+        <height>16777215</height>
        </size>
       </property>
       <property name="frameShape">
@@ -912,12 +849,12 @@ background-color: rgb(98, 98, 115);</string>
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout_2">
+      <layout class="QHBoxLayout" name="horizontalLayout_9">
        <item>
         <widget class="QPushButton" name="previewButton">
          <property name="minimumSize">
           <size>
-           <width>0</width>
+           <width>200</width>
            <height>35</height>
           </size>
          </property>
@@ -932,16 +869,6 @@ background-color: rgb(98, 98, 115);</string>
          </property>
          <property name="text">
           <string>預覽</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QGraphicsView" name="graphicsView">
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>16777215</height>
-          </size>
          </property>
         </widget>
        </item>
@@ -1146,18 +1073,18 @@ background-color: rgb(98, 98, 115);</string>
    </hints>
   </connection>
   <connection>
-   <sender>boldButton</sender>
+   <sender>colorButton</sender>
    <signal>clicked()</signal>
    <receiver>MainWindow</receiver>
-   <slot>eventBold()</slot>
+   <slot>eventColorPicker()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>577</x>
-     <y>114</y>
+     <x>682</x>
+     <y>106</y>
     </hint>
     <hint type="destinationlabel">
-     <x>569</x>
-     <y>8</y>
+     <x>708</x>
+     <y>7</y>
     </hint>
    </hints>
   </connection>
@@ -1176,5 +1103,6 @@ background-color: rgb(98, 98, 115);</string>
   <slot>eventAlign21()</slot>
   <slot>eventAlign22()</slot>
   <slot>eventBold()</slot>
+  <slot>eventColorPicker()</slot>
  </slots>
 </ui>
